Package view styling and fix integer overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,57 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+body {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.grid {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+    border: 1px solid red;
+}
+
+.grid > .col {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+    background-color: #2F3136;
+    padding: 1em;
+    justify-content: space-around;
+}
+
+.package {
+    height: 350px;
+    background-color: #36393F;
+    color: #FFF;
+    font-size: 24px;
+    display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
+}
+
+.package-body {
+    overflow: hidden;
+}
+
+.package-header, .package-footer {
+    background-color: #202225;
+    border: 1px solid white;
+}
+
+.package-header, .package-body, .package-footer {
+    padding: 1em;
+}
+
+.repo-btn {
+    padding: 0.5em;
+    border-radius: 1em;
+    background-color: #B9BBBEBB;
+    text-decoration: none;
+    color: #FFF;
+}
+
+.repo-btn:hover {
+    background-color: #B9BBBE;
+}
